tests/renderer/snapshots/tests__renderer__invalid__label_range_outside_range.snap
---
source: tests/renderer/invalid.rs
expression: render(message)
---
× error: failed to read file
   ╭─[src/test.lm:1:4]
 1 │ abc
   ∶     label_range_outside_range
   ╰──
